--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -62,6 +62,12 @@ header nav ul{
   margin: 2px;
 }
 
+#blogs-list .content{
+  display:grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: auto;
+}
+
 
 /* RIGHT COLUMN */
 
