--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -214,7 +214,7 @@ section{
   padding-left: 5px;
 }
 
-.blog-footer{
+.blogpost-footer{
   background-color: var(--color-right-col-title);
   color: rgba(0,0,0,0.7);
 }
