Templating finished for all pages, still need to get adding blog with dropdown for authors and genres to work

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -62,7 +62,7 @@ header nav ul{
   margin: 2px;
 }
 
-#blogs-list .content{
+#blogs-list .content,#authors-list .content,#genres-list .content{
   display:grid;
   grid-template-columns: 2fr 3fr;
   grid-template-rows: auto;
