--- a/src/main/resources/templates/author-view.html
+++ b/src/main/resources/templates/author-view.html
@@ -45,6 +45,9 @@
 
           <a th:href="@{'/blogs/' + ${blog.id}}" th:text="${blog.title}"></a>
         </div><!-- CONTENT -->
+        <br>
+        <br>
+        <a th:href="@{/authors}" class="link-back">&#8592;Back to Add Author</a>
       </section>
     </div> <!-- GRID-COL-RIGHT -->
 
