--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,8 +27,8 @@
   box-sizing: border-box;
 }
 
-html{
-
+html {
+  overflow-y: scroll;
 }
 body{
   font-family: Arial, Helvetica, sans-serif;
@@ -51,7 +51,7 @@ ul{
 .grid-container{
   background-color: white;
   width: 980px;
-  min-height: 101vh;
+  min-height: 100vh;
 }
 
 /* HEADER */
